// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`html minify > should not apply html minify in production when disableMinimize 1`] = `
[
  MiniCssExtractPlugin {
    "_sortedModulesCache": WeakMap {},
    "options": {
      "chunkFilename": "static/css/async/[name].[contenthash:8].css",
      "experimentalUseImportModule": undefined,
      "filename": "static/css/[name].[contenthash:8].css",
      "ignoreOrder": true,
      "runtime": true,
    },
    "runtimeOptions": {
      "attributes": undefined,
      "insert": undefined,
      "linkType": "text/css",
    },
  },
  {
    "name": "RsbuildCorePlugin",
  },
  HtmlWebpackPlugin {
    "options": {
      "base": false,
      "cache": true,
      "chunks": [
        "index",
      ],
      "chunksSortMode": "auto",
      "compile": true,
      "entryName": "index",
      "excludeChunks": [],
      "favicon": false,
      "filename": "html/index/index.html",
      "hash": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "utf-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "minify": false,
      "publicPath": "auto",
      "scriptLoading": "defer",
      "showErrors": true,
      "template": "",
      "templateContent": "<!DOCTYPE html><html><head></head><body><div id=\\"root\\"></div></body></html>",
      "templateParameters": [Function],
      "title": "",
      "xhtml": false,
      Symbol(entryName): "index",
    },
    "userOptions": {
      "chunks": [
        "index",
      ],
      "entryName": "index",
      "filename": "html/index/index.html",
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "utf-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "minify": false,
      "scriptLoading": "defer",
      "template": "",
      "templateContent": "<!DOCTYPE html><html><head></head><body><div id=\\"root\\"></div></body></html>",
      "templateParameters": [Function],
      "title": "",
      Symbol(entryName): "index",
    },
    "version": 5,
  },
  RsbuildHtmlPlugin {
    "getExtraData": [Function],
    "getHTMLPlugin": [Function],
    "name": "RsbuildHtmlPlugin",
  },
  DefinePlugin {
    "definitions": {
      "import.meta.env": {
        "ASSET_PREFIX": """",
        "BASE_URL": "\\"/\\"",
        "DEV": false,
        "MODE": ""production"",
        "PROD": true,
      },
      "process.env.ASSET_PREFIX": """",
      "process.env.BASE_URL": "\\"/\\"",
    },
  },
  ProgressPlugin {
    "compileTime": null,
    "dependenciesCount": 10000,
    "handler": [Function],
    "hasCompileErrors": false,
    "id": "web",
    "modulesCount": 5000,
    "name": "ProgressPlugin",
    "percentBy": null,
    "prettyTime": [Function],
    "profile": false,
    "showActiveModules": false,
    "showDependencies": true,
    "showEntries": true,
    "showModules": true,
  },
  TsCheckerRspackPlugin {
    "options": {
      "issue": {
        "exclude": [
          [Function],
        ],
      },
      "logger": {
        "error": [Function],
        "log": [Function],
      },
      "typescript": {
        "build": false,
        "configFile": "tsconfig.json",
        "memoryLimit": 8192,
        "mode": "readonly",
        "typescriptPath": "<WORKSPACE>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
      },
    },
  },
]
`;

exports[`html minify > should not apply html minify when htmlPlugin.minify false 1`] = `
[
  MiniCssExtractPlugin {
    "_sortedModulesCache": WeakMap {},
    "options": {
      "chunkFilename": "static/css/async/[name].[contenthash:8].css",
      "experimentalUseImportModule": undefined,
      "filename": "static/css/[name].[contenthash:8].css",
      "ignoreOrder": true,
      "runtime": true,
    },
    "runtimeOptions": {
      "attributes": undefined,
      "insert": undefined,
      "linkType": "text/css",
    },
  },
  {
    "name": "RsbuildCorePlugin",
  },
  HtmlWebpackPlugin {
    "options": {
      "base": false,
      "cache": true,
      "chunks": [
        "index",
      ],
      "chunksSortMode": "auto",
      "compile": true,
      "entryName": "index",
      "excludeChunks": [],
      "favicon": false,
      "filename": "html/index/index.html",
      "hash": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "utf-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "minify": false,
      "publicPath": "auto",
      "scriptLoading": "defer",
      "showErrors": true,
      "template": "",
      "templateContent": "<!DOCTYPE html><html><head></head><body><div id=\\"root\\"></div></body></html>",
      "templateParameters": [Function],
      "title": "",
      "xhtml": false,
      Symbol(entryName): "index",
    },
    "userOptions": {
      "chunks": [
        "index",
      ],
      "entryName": "index",
      "filename": "html/index/index.html",
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "utf-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "minify": false,
      "scriptLoading": "defer",
      "template": "",
      "templateContent": "<!DOCTYPE html><html><head></head><body><div id=\\"root\\"></div></body></html>",
      "templateParameters": [Function],
      "title": "",
      Symbol(entryName): "index",
    },
    "version": 5,
  },
  RsbuildHtmlPlugin {
    "getExtraData": [Function],
    "getHTMLPlugin": [Function],
    "name": "RsbuildHtmlPlugin",
  },
  DefinePlugin {
    "definitions": {
      "import.meta.env": {
        "ASSET_PREFIX": """",
        "BASE_URL": "\\"/\\"",
        "DEV": false,
        "MODE": ""production"",
        "PROD": true,
      },
      "process.env.ASSET_PREFIX": """",
      "process.env.BASE_URL": "\\"/\\"",
    },
  },
  ProgressPlugin {
    "compileTime": null,
    "dependenciesCount": 10000,
    "handler": [Function],
    "hasCompileErrors": false,
    "id": "web",
    "modulesCount": 5000,
    "name": "ProgressPlugin",
    "percentBy": null,
    "prettyTime": [Function],
    "profile": false,
    "showActiveModules": false,
    "showDependencies": true,
    "showEntries": true,
    "showModules": true,
  },
  TsCheckerRspackPlugin {
    "options": {
      "issue": {
        "exclude": [
          [Function],
        ],
      },
      "logger": {
        "error": [Function],
        "log": [Function],
      },
      "typescript": {
        "build": false,
        "configFile": "tsconfig.json",
        "memoryLimit": 8192,
        "mode": "readonly",
        "typescriptPath": "<WORKSPACE>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
      },
    },
  },
]
`;

exports[`html minify > should not apply html plugin when htmlPlugin false 1`] = `
[
  MiniCssExtractPlugin {
    "_sortedModulesCache": WeakMap {},
    "options": {
      "chunkFilename": "static/css/async/[name].[contenthash:8].css",
      "experimentalUseImportModule": undefined,
      "filename": "static/css/[name].[contenthash:8].css",
      "ignoreOrder": true,
      "runtime": true,
    },
    "runtimeOptions": {
      "attributes": undefined,
      "insert": undefined,
      "linkType": "text/css",
    },
  },
  {
    "name": "RsbuildCorePlugin",
  },
  DefinePlugin {
    "definitions": {
      "import.meta.env": {
        "ASSET_PREFIX": """",
        "BASE_URL": "\\"/\\"",
        "DEV": false,
        "MODE": ""production"",
        "PROD": true,
      },
      "process.env.ASSET_PREFIX": """",
      "process.env.BASE_URL": "\\"/\\"",
    },
  },
  ProgressPlugin {
    "compileTime": null,
    "dependenciesCount": 10000,
    "handler": [Function],
    "hasCompileErrors": false,
    "id": "web",
    "modulesCount": 5000,
    "name": "ProgressPlugin",
    "percentBy": null,
    "prettyTime": [Function],
    "profile": false,
    "showActiveModules": false,
    "showDependencies": true,
    "showEntries": true,
    "showModules": true,
  },
  TsCheckerRspackPlugin {
    "options": {
      "issue": {
        "exclude": [
          [Function],
        ],
      },
      "logger": {
        "error": [Function],
        "log": [Function],
      },
      "typescript": {
        "build": false,
        "configFile": "tsconfig.json",
        "memoryLimit": 8192,
        "mode": "readonly",
        "typescriptPath": "<WORKSPACE>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
      },
    },
  },
]
`;

exports[`plugin-minimize > Terser and SWC minimizer should not coexist 1`] = `
[
  SwcMinimizerPlugin {
    "minifyOptions": {
      "cssMinify": {},
      "jsMinify": undefined,
    },
    "name": "swc-minimizer-plugin",
    "sourceMapConfig": {
      "css": false,
      "js": undefined,
    },
  },
  SwcMinimizerPlugin {
    "minifyOptions": {
      "cssMinify": undefined,
      "jsMinify": {
        "format": {
          "asciiOnly": true,
        },
        "mangle": true,
      },
    },
    "name": "swc-minimizer-plugin",
    "sourceMapConfig": {
      "css": false,
      "js": undefined,
    },
  },
]
`;

exports[`plugin-minimize > should apply minimizer in production 1`] = `
[
  CssMinimizerPlugin {
    "options": {
      "exclude": undefined,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "preset": [
            "default",
            {
              "mergeLonghand": false,
            },
          ],
        },
      },
      "parallel": true,
      "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
      "warningsFilter": [Function],
    },
  },
  TerserPlugin {
    "options": {
      "exclude": undefined,
      "extractComments": true,
      "include": undefined,
      "minimizer": {
        "implementation": [Function],
        "options": {
          "format": {
            "ascii_only": true,
          },
          "mangle": {
            "safari10": true,
          },
        },
      },
      "parallel": true,
      "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
    },
  },
]
`;
